# Notes

./: README.md  elite-agent-engineer-roadmap-blog-optimized .md  elite_agent_engineer_learning_roadmap_2026.md  final_elite_agent_engineer_roadmap_privacy_clean.md
framework/demo/travel-planning-agent/: .env  .env.example  .gitignore  CLAUDE.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
framework/demo/travel-planning-agent/app/: main.py  server.py
framework/demo/travel-planning-agent/app/chains/: parse_chain.py  plan_chain.py  reflection_chain.py  revise_chain.py
framework/demo/travel-planning-agent/app/config/: settings.py
framework/demo/travel-planning-agent/app/graph/: nodes.py  routers.py  state.py  workflow.py
framework/demo/travel-planning-agent/app/prompts/: parse_prompt.py  plan_prompt.py  reflection_prompt.py  revise_prompt.py
framework/demo/travel-planning-agent/app/schemas/: reflection.py  tool_result.py  travel_plan.py  travel_request.py
framework/demo/travel-planning-agent/app/services/: planner_service.py  session_service.py
framework/demo/travel-planning-agent/app/static/: style.css
framework/demo/travel-planning-agent/docs/: architecture.md  beginners-guide.md  eval_plan.md  prompt_design.md  technical-tutorial.md  workflow.md
framework/demo/travel-planning-agent/tests/: test_followup.py  test_parse.py  test_reflection.py  test_tool_failure.py  test_tools.py  test_workflow.py
framework/demo/travel-planning-agent/travel_planning_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stage1/: policy_rewrite_v1.md  (+1 more)
(+30 files in other folders)
