[project]
name = "travel-planning-agent"
version = "1.0.0"
description = "LangChain + LangGraph travel planning agent with structured output and reflection loop"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1",
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
